--- a/papers2code-ui/src/common/components/LoadingSpinner.css
+++ b/papers2code-ui/src/common/components/LoadingSpinner.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   max-width: 100%;
   min-height: 300px;
   box-sizing: border-box;
