--- a/papers2code-ui/src/components/landing/HeroAnimation.css
+++ b/papers2code-ui/src/components/landing/HeroAnimation.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar-thumb:hover {
 .sticky-visual-pane {
   right: 0;
   height: 100vh;
-  width: 50vw;
+  width: 50%;
   display: grid;
   place-items: center;
   background: white;
