--- a/papers2code-ui/src/components/paperDetail/Tabs/ImplementationProgress/ImplementationProgressTab.css
+++ b/papers2code-ui/src/components/paperDetail/Tabs/ImplementationProgress/ImplementationProgressTab.css
@@ -1459,7 +1459,7 @@
   }
 }
 
-@media (max-width: 900px), (max-width: 100vw) and (max-width: 700px) {
+@media (max-width: 900px) {
   .stats-grid {
     flex-direction: column !important;
     gap: 1.25rem !important;
