--- a/papers2code-ui/src/index.css
+++ b/papers2code-ui/src/index.css
@@ -24,10 +24,16 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  width: 100%;
+  display: block;
+}
+
+#root {
+  width: 100%;
+  min-height: 100vh;
+  display: block;
 }
 
 h1 {
